# meeple_cat

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  rust_redesign.md
backend/: .env.example  Dockerfile  alembic.ini  benchmark.py  cross_engine_arena.py  cross_engine_tictactoe.py  docker-compose.yml  eval_diagnostic.py  pyproject.toml
backend/docs/: bot-engine-reference.md  bot-roadmap.md  rust-bot-mcts-analysis.md
backend/src/: auth.py  config.py  main.py
backend/src/api/: admin.py  auth.py  games.py  health.py  matches.py  rooms.py  users.py
backend/src/auth/: __init__.py  cookies.py  dependencies.py  jwt.py  models.py  providers.py  routes.py  schemas.py  ws_auth.py
backend/src/engine/: arena.py  arena_cli.py  bot_runner.py  bot_strategy.py  errors.py  event_store.py  game_simulator.py  grpc_plugin.py  mcts.py  models.py  protocol.py  registry.py  session.py  session_manager.py  state_store.py  validation.py
backend/src/engine/proto/: game_engine_pb2.py  game_engine_pb2.pyi  game_engine_pb2_grpc.py
backend/src/games/carcassonne/: __init__.py  board.py  evaluator.py  features.py  meeples.py  plugin.py  scoring.py  tiles.py  types.py
backend/src/meeple.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/migrations/: env.py
backend/src/models/: __init__.py  base.py  database.py  match.py  room.py  user.py
backend/src/ws/: __init__.py  broadcaster.py  connection_manager.py  handler.py  messages.py
backend/tests/: conftest.py
backend/tests/engine/: test_arena.py  test_bot_strategy.py  test_game_simulator.py  test_mcts.py  test_models.py  test_registry.py
backend/tests/server/: test_auth.py  test_games.py  test_matches.py  test_websocket_game.py
game-engine/: Cargo.toml  Dockerfile  bot_profiles.toml  build.rs
game-engine/benches/: valid_actions.rs
game-engine/benches/fixtures/: state_123_t15.json  state_123_t30.json  state_123_t5.json  state_123_t50.json  state_42_t15.json  state_42_t30.json  state_42_t5.json  state_42_t50.json  state_999_t15.json  state_999_t30.json  state_999_t5.json  state_999_t50.json
game-engine/src/: lib.rs  main.rs  server.rs
game-engine/src/engine/: arena.rs  bot_profiles.rs  bot_strategy.rs  evaluator.rs  mcts.rs  mod.rs  models.rs  plugin.rs  simulator.rs
game-engine/src/games/: mod.rs
game-engine/tests/: bot_diagnostics.rs  replay_comparison.rs
game-engine/tests/fixtures/: game_trace.json
(+135 files in other folders)
