[package]
name = "meeple-game-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
rayon = "1.10"
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "generate_fixtures"
path = "src/bin/generate_fixtures.rs"

[[bin]]
name = "arena"
path = "src/bin/arena.rs"

[[bench]]
name = "valid_actions"
harness = false
